--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,9 @@
     <style name="RoundedFAB">
         <item name="cornerSize">50%</item>
     </style>
-
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">#fff</item>
+        <item name="boxStrokeWidth">2dp</item>
+    </style>
     <style name="Theme.EF_Ecommerce" parent="Base.Theme.EF_Ecommerce" />
 </resources>
